--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cls-hooked": "^4.2.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
