--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@playwright/test": "^1.29.2",
     "@swc/cli": "^0.1.59",
     "@swc/core": "^1.3.24",
+    "@types/cookie-session": "^2.0.44",
     "bcrypt": "^5.1.0",
     "cls-hooked": "^4.2.2",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
