--- a/scripts/docker-compose.test.yml
+++ b/scripts/docker-compose.test.yml
@@ -4,17 +4,16 @@ services:
       context: postgres-db
       dockerfile: Dockerfile
     environment:
-      - POSTGRES_USER=jorge
-      - POSTGRES_DB=users
-      - POSTGRES_PASSWORD=123456
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - ${POSTGRES_PORT}:5432
-
-    volumes:
-      - postgres-db-test:/var/lib/postgresql/data
+#    volumes:
+#      - postgres-db-test:/var/lib/postgresql/data
     healthcheck:
       #      test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
-      test: ['CMD-SHELL', "psql -U jorge -d users -c 'SELECT 1'"]
+      test: ['CMD-SHELL', "psql -U ${POSTGRES_USER} -d ${POSTGRES_DB} -c 'SELECT 1'"]
       interval: 1s
       timeout: 5s
       retries: 5
@@ -23,5 +22,5 @@ services:
     depends_on:
       db:
         condition: service_healthy
-volumes:
-  postgres-db-test:
+#volumes:
+#  postgres-db-test:
