--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.28.0"
+    "sequelize": "^6.31.0",
+    "chalk": "^4.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -45,7 +46,6 @@
     "@types/jsonwebtoken": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
-    "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "concurrently": "^7.6.0",
     "eslint": "^8.30.0",
